# Meique

./: .gitignore  CMakeLists.txt  README.rst  bootstrap.sh  meique.1  meique.lua  meiqueflow.dot
benchmark/: gen-test-case.py  meique.lua  plot.rb  run-test.sh  run-tests.sh
doc/: Makefile
doc/source/: conf.py  find_package.rst  index.rst  introduction.rst  predefined_scopes.rst  scopes.rst
ext/: CMakeLists.txt  meique.lua
ext/file2c/: CMakeLists.txt  file2c.cpp  meique.lua
ext/lua/: CMakeLists.txt  lapi.cpp  lobject.h  lparser.cpp  ltm.cpp  ltm.h  lvm.cpp  lvm.h  meique.lua
src/: CMakeLists.txt  basictypes.h  cmdline.cpp  cmdline.h  compilabletarget.cpp  compilabletarget.h  compiler.cpp  compiler.h  compilerfactory.cpp  compilerfactory.h  compileroptions.cpp  compileroptions.h  config.cpp  config.h  cppstringssux.cpp  cppstringssux.h  customtarget.cpp  customtarget.h  dependencechecker.cpp  dependencechecker.h  executabletarget.cpp  executabletarget.h  filehash.cpp  filehash.h  gcc.cpp  gcc.h  graph.cpp  graph.h  hashgroups.cpp  hashgroups.h  job.cpp  job.h  jobfactory.cpp  jobfactory.h  joblistenner.h  jobmanager.cpp  jobmanager.h  jobqueue.cpp  jobqueue.h  librarytarget.cpp  (+45 more)
tests/: meique.lua  runtest.sh  testnormalizepath.cpp
tests/basic_header_dependence/: header.h  main.cpp  script.sh
tests/basic_relink/: main.cpp  meique.lua  script.sh
tests/change_compiler_flags/: main.c  meique.lua  script.sh
tests/cyclic_dependency/: meique.lua  script.sh
tests/global_flags/: main.cpp  meique.lua  script.sh
tests/lua_lock/: meique.lua  script.sh
tests/requires_meique/: meique.lua  script.sh
tests/static_linker_flags/: main.cpp  meique.lua  script.sh  sharedlib.cpp  staticlib2.cpp
tests/two_targets_samename/: meique.lua
tests/two_targets_sharing_a_file/: foo.cpp  lib.cpp  main.cpp  meique.lua  script.sh
tests/twotargets_samename/: script.sh
